fix(inte): fix dishe h3 overflow and max-height on restaurant illustration

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -82,6 +82,11 @@ header {
                     overflow: hidden;
                 }
             }
+            & h3 {
+                text-overflow: ellipsis;
+                white-space:nowrap;
+                overflow: hidden;
+            }
         }
         &__check {
             color: white;
